5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1616_2924.log
== TEST (2019-04-01 15:21:35) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())

s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:39) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())

s = s0+v*t
print(s)
-- EXECUTION TIME:
0.161959
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:43) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())

s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:24:54) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:09) 
-- CODE:
from math import *
s = s0+v*t
p = input()
v = input()
t = input()
print("p"+"v"+"t")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:39) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print("p"+"v"+"t")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:41) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print("p"+"v"+"t")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:30:42) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print("p"+"v"+"t")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:02) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:04) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:05) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:31:10) 
-- CODE:
from math import *
s = s0+v*t
s = input()
v = input()
t = input()
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:01) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:32:15) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:32:21) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
print(s)
-- EXECUTION TIME:
0.164022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 4, in <module>
    t = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:33:55) 
-- CODE:
p = input("s-s0:")
v = input("velocidade:")
i = input("tempo:")
print(p)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:34:04) 
-- CODE:
p = input("s-s0:")
v = input("velocidade:")
i = input("tempo:")
print(p)
-- EXECUTION TIME:
0.14285
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
2
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
1
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:34:41) 
-- CODE:
p = input()
v = input()
i = input()
print(p)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:34:47) 
-- CODE:
p = input()
v = input()
i = input()
print(p)
-- EXECUTION TIME:
0.174688
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
2
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
1
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:32) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:35:34) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(s)
-- EXECUTION TIME:
0.12587
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 4, in <module>
    t = input()
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:48) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:51) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:51) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:52) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:52) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:53) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:54) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:35:54) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s= s0+v*t
print(int(s)
-- ERROR:
File "XXXX", line 7
    
                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:46) 
-- CODE:

s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:49) 
-- CODE:

s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:50) 
-- CODE:

s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:50) 
-- CODE:

s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:58) 
-- CODE:
from math import*
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:36:59) 
-- CODE:
from math import*
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:00) 
-- CODE:
from math import*
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:00) 
-- CODE:
from math import*
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:03) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:03) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:04) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:04) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:05) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:05) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:05) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:05) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:06) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:06) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:07) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:07) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:07) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:08) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:09) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:10) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:11) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:11) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:37:12) 
-- CODE:
from math import *
s= s0+v*t
p = s
v = v
i = t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    s= s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:39:54) 
-- CODE:
s = input("posição final do movel:")
s0 = input("posição inicial do movel:")
v = input("velocidade do movel:")
t = input("intervalo de tempo:")
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:35) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:40:51) 
-- CODE:
s = input()
s0 = input()
v = input()
t = input()
s = s0+vt
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:21) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:23) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:24) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:24) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:24) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:24) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:24) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:25) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:25) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:25) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:27) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:28) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:29) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:30) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:30) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:31) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:32) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:32) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:32) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:33) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:48) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:48) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:48) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:48) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:42:48) 
-- CODE:
s = 10
v = 12
t = 60
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s0+v*t
NameError: name 's0' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:43:44) 
-- CODE:
s = float(input())
s0 = float(input())
v = float(input())
t = float(input())
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:43:47) 
-- CODE:
s = float(input())
s0 = float(input())
v = float(input())
t = float(input())
s = s0+v*t
print(s)
-- EXECUTION TIME:
0.130063
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 4, in <module>
    t = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:44:59) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:45:00) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:45:01) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())
s = s0+v*t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:02) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())
s = s0+v*t
print(s)
-- EXECUTION TIME:
0.134691
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:45:17) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())
s = s0 + v * t
print(s)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:45:19) 
-- CODE:
s = int(input())
s0 = int(input())
v = int(input())
t = int(input())
s = s0 + v * t
print(s)
-- EXECUTION TIME:
0.184517
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2924/main.py", line 4, in <module>
    t = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:48:29) 
-- CODE:
p = int(input())
v = int(input())
t = int(input())
print(p)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:48:31) 
-- CODE:
p = int(input())
v = int(input())
t = int(input())
print(p)
-- EXECUTION TIME:
0.147054
-- TEST CASE 1:
---- input:
2
25
120
---- correct output:
3002
---- user output:
2
-- TEST CASE 2:
---- input:
1
39
109
---- correct output:
4252
---- user output:
1
-- TEST CASE 3:
---- input:
5
71
43
---- correct output:
3058
---- user output:
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:07) 
-- CODE:
s = input()
v = input()
t = input
s = s + v * t

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s + v * t
TypeError: can't multiply sequence by non-int of type 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:38) 
-- CODE:
s = input()
v = input()
t = input
s = s+v*t

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s+v*t
TypeError: can't multiply sequence by non-int of type 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:54:50) 
-- CODE:
s = input()
v = input()
t = input
s = s+vt

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    s = s+vt
NameError: name 'vt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
